css animation part2

--- a/css_Animation.html
+++ b/css_Animation.html
@@ -8,6 +8,10 @@
      <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div>adheena</div>
+    <div class="loader-container">
+        <div class="loader-1"></div>
+        <div class="loader-2"></div>
+        <div class="loader-3"></div>
+    </div>
 </body>
 </html>
